# more_waffle

./: .gitignore  Cargo.toml  README.md
fast-instantiate/: Cargo.toml
fast-instantiate/src/: lib.rs
grunk/: Cargo.toml
grunk/src/: lib.rs
tcore/: Cargo.toml
tcore/src/: fcopy.rs  lib.rs
thrown/: Cargo.toml
thrown/src/: lib.rs
waffle-ast/: Cargo.toml
waffle-ast/src/: bulk_memory_lowering.rs  fcopy.rs  lib.rs  tutils.rs  wasi_compat.rs
waffle-ic/: BUILD.bazel  Cargo.toml
waffle-ic/src/: lib.rs
waffle-monomorph/: Cargo.toml
waffle-monomorph/src/: lib.rs
waffle-splice/: Cargo.toml
waffle-splice/src/: lib.rs  mapper.rs
waffle-trie/: Cargo.toml
waffle-trie/src/: lib.rs
waffle-unistub/: Cargo.toml
waffle-unistub/src/: lib.rs
waffle-wasip1-stub/: Cargo.toml
waffle-wasip1-stub/src/: lib.rs
wasm-multi-memory-macro/: Cargo.toml
wasm-multi-memory-macro/src/: lib.rs
wasm-multi-memory-polyfill/: Cargo.toml
wasm-multi-memory-polyfill/src/: lib.rs  pass.rs  rust.rs
