[workspace]
members=[ "fast-instantiate", "grunk", "thrown", "waffle-ast","waffle-splice", "wasm-multi-memory-polyfill"] 
resolver="2"

[workspace.dependencies]

# waffle = {git="https://github.com/portal-co/waffle-.git",branch="pr/changes2"}
portal-pc-waffle = {git="https://github.com/portal-co/waffle-.git",branch="pr/changes2"}
