[package]
name = "waffle-ast"
version = "0.4.1"
edition = "2021"
license = "CC0-1.0"
description = "AST utilities for waffle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bimap = "0.6.3"
portal-pc-waffle.workspace = true
