[package]
name = "waffle-splice"
version = "0.3.0"
edition = "2021"
license = "CC0-1.0"
description = "Rewrite WAFFLE operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
portal-pc-waffle.workspace = true
waffle-ast = { version = "0.3.0", path = "../waffle-ast" }
