[package]
name = "wasm-multi-memory-polyfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
portal-pc-waffle.workspace = true
proc-macro2 = "1.0.85"
quote = "1.0.36"
serde = {version="1.0.203",features=["derive"]}
serde_bencode = "0.2.4"
syn = "2.0.66"
waffle-ast = { version = "0.1.0", path = "../waffle-ast" }
